修复了已知BUG

--- a/template/pc/default/htmlSA8EWA88/author/book_add.html
+++ b/template/pc/default/htmlSA8EWA88/author/book_add.html
@@ -186,7 +186,7 @@ var loadImageX = function() {
   readerX.readAsDataURL(oFile)
 }
 $(function(){
-  comic_edit(0);
+  comic_edit(0,'book');
 })
 </script>
 </body>
