--- a/template/pc/default/htmlSA8EWA88/author/book_info.html
+++ b/template/pc/default/htmlSA8EWA88/author/book_info.html
@@ -174,7 +174,7 @@ var loadImageX = function() {
   readerX.readAsDataURL(oFile)
 }
 $(function(){
-  comic_edit([book_id]);
+  comic_edit([book_id],'book');
 })
 </script>
 </body>
